2007-11-02  Steve Frécinaux  <code@istique.net>

	* bindings/python/Makefile.am:
	* bindings/python/gedit.defs:
	* bindings/python/gedit.override:

	Bind gedit.debug in python, in such a way it works like gedit_debug or
	gedit_debug_message without having to specify the filename and line
	number and calling function name.

2007-11-02  Steve Frécinaux  <code@istique.net>

	Fix bug 491442 – gedit.commands.load_uri should only accept valid URIs

	* gedit/gedit-commands-file.c (gedit_commands_load_uri): check that
	the uri is valid before trying to open it.

2007-11-02  Steve Frécinaux  <code@istique.net>

	Fix bug #491312 – External Tools with two lines as input

	* plugins/externaltools/tools/functions.py: go to the beginning of the
	current line instead of the previous one when running an external tool
	on "current line".

2007-10-28  Steve Frécinaux  <code@istique.net>

	* gedit/gedit-utils.c: Use gdk_error_trap_*() to protect direct
	XGetWindowProperty() calls.

2007-10-28  Steve Frécinaux  <code@istique.net>

	Fix bug #484613 by adding viewport support to gedit.

	* gedit/gedit-utils.[ch]: New utility function
	gedit_utils_get_current_viewport().

	* gedit/gedit-app.[ch]: Rename gedit_app_get_window_in_workspace() into
	gedit_app_get_window_in_viewport and add viewport support to it.

	* gedit/gedit.c: Adapt IPC protocol to specify the current viewport to
	the running instance.

2007-10-28  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-utils.[ch]:
	* gedit/gedit-window.c:

	Simply use g_strdelimit instead of a cutsom function to escape slashes.

=== gedit 2.20.3 ===

2007-10-18  Paolo Borelli  <pborelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	gedit 2.20.3 released

2007-10-17  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-local-document-saver.c: fix permissions and ownership
	saving in the save-tmp-and-swap strategy. Bug #468578.

=== gedit 2.20.2 ===

2007-10-15  Paolo Borelli  <pborelli@katamail.com>

	* configure.ac:
	* README: