@@ -1,3 +1,7 @@
+2007-11-04  Paolo Borelli  <pborelli@katamail.com>
+
+	* gedit/gedit-document.c: be more careful when retrieving mtime.
+
 2007-11-02  Steve Frécinaux  <code@istique.net>
 
 	* bindings/python/Makefile.am:
